--- a/lib/dedalo/component_relation_parent/html/component_relation_parent_edit.phtml
+++ b/lib/dedalo/component_relation_parent/html/component_relation_parent_edit.phtml
@@ -7,16 +7,16 @@
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in');
 
 	print "<div class=\"wrap_component css_wrap_relation_parent wrap_component_{$modo} wrap_component_{$tipo}\" id=\"{$id_wrapper}\" ";
-	print "data-tipo=\"{$tipo}\" ";
-	print "data-from_component_tipo=\"{$from_component_tipo}\" ";
+	print "data-tipo=\"{$tipo}\" ";	
 	print "data-lang=\"{$lang}\" ";
 	print "data-parent=\"{$parent}\" ";
 	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{$component_info}' ";
-	print "data-children_component_tipo=\"{$children_component_tipo}\" ";
-	print "data-relation_type=\"".DEDALO_RELATION_TYPE_CHILDREN_TIPO."\" "; // Note that use CHILDREN_TIPO for search only pouposes
+	#print "data-from_component_tipo=\"{$from_component_tipo}\" ";
+	#print "data-children_component_tipo=\"{$children_component_tipo}\" ";
+	print "data-relation_type=\"".DEDALO_RELATION_TYPE_CHILDREN_TIPO."\" "; // Note that use CHILDREN_TIPO for search only 
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
 	print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";  // Default hierarchy_sections
 	print ">";
@@ -54,7 +54,7 @@
 			$html_content .= "component_common.init(".json_encode($init_options).");";
 			$html_content .= '</script>';
 
-			$html_content .= "<div class=\"wrap_relation_parent_values\">";				
+			$html_content .= '<div class="wrap_relation_parent_values">';				
 
 				# SOURCE_MODE SWITCH
 				$source_mode = 'tree';
@@ -65,25 +65,21 @@
 					default:
 
 						$hierarchy_types_json 	 	= '';
-						$hierarchy_sections_json 	= json_encode(array($section_tipo));
+						$hierarchy_sections_json 	= json_encode($hierarchy_sections);
 
 						# parent_area_is_model
-						if (isset($_GET['model']) && $_GET['model']==1) {
-							$parent_area_is_model = true;
-						}else{
-							$parent_area_is_model = false;
-						}
+						$parent_area_is_model 		= (isset($_GET['model']) && $_GET['model']==1) ? true : false;						
 						$parent_area_is_model_json 	= json_encode($parent_area_is_model);
 
 						# BTN LINK ELEMENT
-						$html_content .= "<div class=\"button_add relation_parent_add_button\" ";
-						$html_content .= "data-id_wrapper=\"$id_wrapper\" ";
-						$html_content .= "data-component_name=\"$component_name\" ";
-						$html_content .= "data-hierarchy_types='{$hierarchy_types_json}' ";
-						$html_content .= "data-hierarchy_sections='{$hierarchy_sections_json}' ";
-						$html_content .= "data-parent_area_is_model='{$parent_area_is_model_json}' ";
-						$html_content .= "onclick=\"component_common.open_ts_window(this)\" ";
-						$html_content .= "></div>";
+						$html_content .= '<div class="button_add relation_parent_add_button" ';
+						$html_content .= 'data-id_wrapper="'.$id_wrapper.'" ';
+						$html_content .= 'data-component_name="'.$component_name.'" ';
+						$html_content .= 'data-hierarchy_types=\''.$hierarchy_types_json.'\' ';
+						$html_content .= 'data-hierarchy_sections=\''.$hierarchy_sections_json.'\' ';
+						$html_content .= 'data-parent_area_is_model=\''.$parent_area_is_model_json.'\' ';
+						$html_content .= 'onclick="component_common.open_ts_window(this)" ';
+						$html_content .= '></div>';
 						break;
 				}//end switch ($source_mode)
 
@@ -117,36 +113,36 @@
 
 				#
 				# TERMS
-				$html_content .= "<ul class=\"css_relation_parent_valor\">";
+				$html_content .= '<ul class="css_relation_parent_valor">';
 				foreach ($ar_values as $item) {
 
 					$current_locator 	  = $item->value;
 					$current_locator_json = json_encode($current_locator);
 
-					$html_content .= "<li>";
+					$html_content .= '<li>';
 
 					# BTN DELETE
-					$html_content .= "<div class=\"icon_bs link css_relation_parent_button_delete\" ";
+					$html_content .= '<div class="icon_bs link css_relation_parent_button_delete" ';
 					$html_content .= 'data-current_value=\''.$current_locator_json.'\' ';
-					$html_content .= "onclick=\"component_relation_parent.delete(this)\">";
-					$html_content .= "</div>";
+					$html_content .= 'onclick="component_relation_parent.delete(this)">';
+					$html_content .= '</div>';
 
 
 					# VALUE . STRING RESOLVED TO SHOW
 					$html_content .= $item->label;
 					$html_content .= ' <span class="notes">['.$current_locator->section_tipo.'_'.$current_locator->section_id.']</span>';
 					
-					$html_content .= "</li>";
+					$html_content .= '</li>';
 				}
-				$html_content .= "</ul>";
+				$html_content .= '</ul>';
 
-			$html_content .= "</div>";//end wrap_parent_values
+			$html_content .= '</div>';//end wrap_parent_values
 
 
 			# INPUT DATA HIDDEN
-				$html_content .= "<input type=\"text\" name=\"{$search_input_name}\" class=\"relation_parent_dato_hidden\" style=\"width:100%;display:none\" "; // display:none
-				$html_content .= "data-limit=\"$limit\" ";
-				$html_content .= "value='{$dato_json}' ";
+				$html_content .= '<input type="text" name="'.$search_input_name.'" class="relation_parent_dato_hidden" style="width:100%;display:none" '; // display:none
+				$html_content .= 'data-limit="'.$limit.'" ';
+				$html_content .= 'value=\''.$dato_json.'\' ';
 				$html_content .= "/>";
 
 
@@ -171,7 +167,7 @@
 	print $html_content;
 
 
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out');
