Minor cosmetic changes

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -503,6 +503,8 @@ th.tag_id_column {
 				flex-grow: 0;
 				display: flex;
 				padding: 0;
+
+				overflow: hidden; // 10-08-2018
 			}
 		}
 		.table_row.row_header {
