Change the section_group look and feel

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -35,7 +35,7 @@ hr {
 	box-shadow: 0 1px 8px #999999;
 }
 .box_shadow_1 {
-	box-shadow: 2px 2px 8px #888888;
+	box-shadow: 2px 2px 4px #d7d7d7;
 }
 
 /*BOX BORDER RADIUS
@@ -57,9 +57,10 @@ hr {
 	color: #FFFFFF;
 	text-transform: uppercase;
 	cursor: pointer;
+	border-bottom: 0.5px solid #bdbdbd;
 }
 .title_down_box:hover {
-	background-color: #666;
+	background-color: #e4e4e4;
 }
 .title_down_box:active {
 	/* background-color: #999999; */
