Chage the style and flat the section_group

--- a/lib/dedalo/section_group/css/section_group.less
+++ b/lib/dedalo/section_group/css/section_group.less
@@ -107,6 +107,7 @@
 	padding-left: 10px;
 	padding-right: 10px;
 	box-shadow: none;
+	border: none;
 	
 	}
 	.css_section_group_wrap * .css_section_group_wrap .css_section_group_content {
