--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -35,7 +35,8 @@ hr {
 	box-shadow: 0 1px 8px #999999;
 }
 .box_shadow_1 {
-	box-shadow: 2px 2px 4px #d7d7d7;
+//	box-shadow: 2px 2px 4px #d7d7d7;
+	border: .5px solid #ddd;
 }
 
 /*BOX BORDER RADIUS
@@ -57,10 +58,10 @@ hr {
 	color: #FFFFFF;
 	text-transform: uppercase;
 	cursor: pointer;
-	border-bottom: 0.5px solid #bdbdbd;
+	border-bottom: 0.5px solid #d5d5d5;
 }
 .title_down_box:hover {
-	background-color: #e4e4e4;
+	background-color: #f3f3f3;
 }
 .title_down_box:active {
 	/* background-color: #999999; */
