change the style an flat the component_portal

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -157,10 +157,10 @@ input[type="text"], input[type="password"], textarea {
 	font-size: 12px;
 	}
 	input[type=text]:hover, input[type="password"]:hover {
-		background-color: #F8F8F8;
+		//background-color: #F8F8F8;
 	}
 	input[type="text"]:focus, input[type="password"]:focus {		
-		box-shadow: 0 0 10px #BEBEBE;
+		//box-shadow: 0 0 10px #BEBEBE;
 		color: #000000;
 		z-index: 2001 !important;
 	}
