Unify style of component_select for webkit & moz

--- a/lib/dedalo/component_select_lang/css/component_select_lang.less
+++ b/lib/dedalo/component_select_lang/css/component_select_lang.less
@@ -17,10 +17,22 @@ WRAP DIV CONTAINER*/
 
 
 select.css_select_lang {
-	padding: 2px;
-	cursor: pointer;
-	margin: 0;
-	max-width: 100%;
+		padding: 2px;
+		cursor: pointer;
+		margin: 0;
+		max-width: 99.9%;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		border: 1px solid #e1e1e1;
+		border-radius: 3px;
+		background: url('../../themes/default/select.svg');
+		background-position: top 50% right 3px;
+		background-size: 7px 12px;
+		background-repeat: no-repeat;
+		background-color: #f6f6f6;
+		padding-right: 15px;
+		padding-left: 7px;
 	}
 	select.css_select_lang:hover {
 	}
