--- a/lib/dedalo/component_select/css/component_select.less
+++ b/lib/dedalo/component_select/css/component_select.less
@@ -24,8 +24,18 @@
 		cursor: pointer;
 		margin: 0;
 		max-width: 99.9%;
-		//border-color: #c7c5c5;
-		//height: 25px;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		border: 1px solid #e1e1e1;
+		border-radius: 3px;
+		background: url('../../themes/default/select.svg');
+		background-position: top 50% right 3px;
+		background-size: 7px 12px;
+		background-repeat: no-repeat;
+		background-color: #f6f6f6;
+		padding-right: 15px;
+		padding-left: 7px;
 		}
 		.css_wrap_select select.css_select:hover {
 			/*
