--- a/lib/dedalo/component_state/css/component_state.less
+++ b/lib/dedalo/component_state/css/component_state.less
@@ -38,6 +38,21 @@
 		margin-top: 0;
 		margin-left: 10px;
 		color: #000000;
+		padding: 2px;
+		cursor: pointer;
+		max-width: 99.9%;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		border: 1px solid #e1e1e1;
+		border-radius: 3px;
+		background: url('../../themes/default/select.svg');
+		background-position: top 50% right 3px;
+		background-size: 7px 12px;
+		background-repeat: no-repeat;
+		background-color: #f6f6f6;
+		padding-right: 15px;
+		padding-left: 7px;
 	}
 	.css_wrap_state .css_state_rotulo {
 		margin-right: 8px;
