Remove the shadow in comoponent_image flat style

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -382,14 +382,14 @@ mark {
 /*-- THUMB IMAGES IN LIST (image,av,etc.)
 ----------------------------------------- */
 .thumb_in_list {
-	box-shadow: 1px 1px 6px #CACACA;
+	//box-shadow: 1px 1px 6px #CACACA;
 	border-radius: 1px;
 	width: 102px;
 	height: 57px;
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-color: white;
+	//background-color: white;
 	}
 	.thumb_in_list:hover {
 		cursor: -webkit-zoom-in;
