--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -176,7 +176,7 @@
 	/*background-size: 100%;*/
 	/*background-image: url('../../themes/default/spinner2.gif');
 	background-color: #f5f5f5;*/
-	background-color: #FFFFFF;
+	background-color: rgba(255, 255, 255, 0);
 	}	
 	.div_image_image_in_list img {
 		display: block;
