--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -35,7 +35,8 @@ hr {
 	box-shadow: 0 1px 8px #999999;
 }
 .box_shadow_1 {
-	box-shadow: 2px 2px 8px #888888;
+//	box-shadow: 2px 2px 4px #d7d7d7;
+	border: .5px solid #ddd;
 }
 
 /*BOX BORDER RADIUS
@@ -57,9 +58,10 @@ hr {
 	color: #FFFFFF;
 	text-transform: uppercase;
 	cursor: pointer;
+	border-bottom: 0.5px solid #d5d5d5;
 }
 .title_down_box:hover {
-	background-color: #666;
+	background-color: #f3f3f3;
 }
 .title_down_box:active {
 	/* background-color: #999999; */
@@ -380,14 +382,14 @@ mark {
 /*-- THUMB IMAGES IN LIST (image,av,etc.)
 ----------------------------------------- */
 .thumb_in_list {
-	box-shadow: 1px 1px 6px #CACACA;
+	//box-shadow: 1px 1px 6px #CACACA;
 	border-radius: 1px;
 	width: 102px;
 	height: 57px;
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-color: white;
+	//background-color: white;
 	}
 	.thumb_in_list:hover {
 		cursor: -webkit-zoom-in;
