--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -503,6 +503,8 @@ th.tag_id_column {
 				flex-grow: 0;
 				display: flex;
 				padding: 0;
+
+				overflow: hidden; // 10-08-2018
 			}
 		}
 		.table_row.row_header {
@@ -518,15 +520,15 @@ th.tag_id_column {
 				font-weight: normal;
 				vertical-align: top;
 				color: #292b2a;
-				text-shadow: 0 0 0 transparent, 0 1px 0 #fff;
+				//text-shadow: 0 0 0 transparent, 0 1px 0 #fff;
 				white-space: nowrap;
 				border: none;
 				border-left-width: 1px;
 				border-left-style: solid;
 				border-left-color: #ccc;
 				line-height: 14px;
-				background-color: rgba(238,238,238,0.7);
-				background-image: url(../../themes/default/tab_header2.jpg);
+				background-color: #f2f2f2;
+				//background-image: url(../../themes/default/tab_header2.jpg);
 				background-repeat: repeat-x;
 
 			}
