--- a/lib/dedalo/section_group/css/section_group.less
+++ b/lib/dedalo/section_group/css/section_group.less
@@ -48,14 +48,14 @@
 	margin: 0px;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
-	background-image: url('../../themes/default/tab_header1.jpg');
-	background-position: center;
+	//background-image: url('../../themes/default/tab_header1.jpg');
+	//background-position: center;
 	}
 	.css_section_group_titulo > label {
 		font-weight: normal !important;		
 		line-height: 14px;
-		color: #292b2a;
-		text-shadow: 0 0 0 transparent, 0 1px 0 #fff;	
+		color: #0a0a0a;
+		//text-shadow: 0 0 0 transparent, 0 1px 0 #fff;	
 		padding: 0;
 		margin-top: 3px;
 		margin-left: 3px;
@@ -107,6 +107,7 @@
 	padding-left: 10px;
 	padding-right: 10px;
 	box-shadow: none;
+	border: none;
 	
 	}
 	.css_section_group_wrap * .css_section_group_wrap .css_section_group_content {
