Falt design and compatiblity betwen webkit & moz

--- a/lib/dedalo/menu/css/menu.less
+++ b/lib/dedalo/menu/css/menu.less
@@ -344,13 +344,25 @@ background-color: #FFFF00;
 		margin-left: 5px;
 		top: 2px;
 		position: relative;
-		background-color: #373737;
-		//box-shadow: inset 2px 2px 4px #3f3f3f;
+
 		color: #cccccc;
-		border-radius: 6px;
 		border-color: transparent;
 		line-height: 1em;
-		opacity: 0.8;
+		//opacity: 0.8;
+		padding: 2px;
+		cursor: pointer;
+		max-width: 99.9%;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		border-radius: 3px;
+		background: url('../../themes/default/select_invert.svg');
+		background-position: top 50% right 3px;
+		background-size: 7px 12px;
+		background-repeat: no-repeat;
+		//background-color: #373737;
+		padding-right: 15px;
+		padding-left: 7px;
 	}
 	#menu_wrapper .dedalo_aplication_langs_selector.unsync {
 		color: #fdcf39;
