--- a/lib/dedalo/component_password/html/component_password_edit.phtml
+++ b/lib/dedalo/component_password/html/component_password_edit.phtml
@@ -39,6 +39,7 @@
 				$html_content .= "value=\"{$dato_limited_leng}\"  ";
 				$html_content .= "data-tipo=\"{$tipo}\" ";
 				$html_content .= "data-lang=\"{$lang}\" ";
+				$html_content .= "data-mandatory='{$mandatory_json}' ";
 				$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
 				$html_content .= "data-parent=\"{$parent}\" ";
 				$html_content .= "title=\"$html_title\" ";
@@ -63,6 +64,11 @@
 					$init_options->component_name 	= $component_name;
 					$init_options->wrapper_id 		= $id_wrapper;
 				$html_content .= 'component_common.init('.json_encode($init_options).');';
+
+				// First test on load element
+				if ($mandatory===true) {
+					$html_content .= "component_password.mandatory('{$id_wrapper}');";
+				}
 				$html_content .= '</script>';					
 				break;											
 	}
