Autocomplete search service and unique check use

--- a/lib/dedalo/component_input_text/css/component_input_text.less
+++ b/lib/dedalo/component_input_text/css/component_input_text.less
@@ -114,3 +114,33 @@
 		margin-right: 1.6%;
 		margin-top: 1%;
 	}
+
+	.unique_warning{
+		position: absolute;
+		float: left;
+		z-index: 10;
+		display: block;
+		max-width: 450px;
+		padding: 5px 8px;
+		margin: 4px 0 0;
+		font-size: 13px;
+		font-weight: 400;
+		color:#fff;
+		border-radius: 3px;
+		background-color: rgb(250, 121, 45);
+		
+	}
+
+	.unique_warning:before{
+		content:'';
+		position:absolute;
+		width:8px;
+		height:8px;
+		left:20%;
+		top: -8px;
+		transform:translate(-50%,50%) rotate(45deg);
+		background-color:#fa792d;
+	}
+
+
+
