--- a/lib/dedalo/component_input_text/html/component_input_text_edit.phtml
+++ b/lib/dedalo/component_input_text/html/component_input_text_edit.phtml
@@ -16,6 +16,10 @@
 	print "data-parent=\"{$parent}\" ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='{$dato_json}' ";
+	print "data-unique='{$unique_json}' ";
+	if($unique === true){
+		print "data-is_saveable=\"false\" ";
+	}
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{$component_info}' ";
 	print ">";
@@ -97,6 +101,9 @@
 					$html_content .= "<input class=\"css_input_text\" type=\"text\" ";
 					if($context->context_name==='default') {
 						$html_content .= "onchange=\"component_input_text.Save(this)\" ";
+					}
+					if($unique === true){
+						$html_content .= "onkeyup=\"component_input_text.is_unique(this)\" ";
 					}					
 					$html_content .= "data-tipo=\"{$tipo}\" ";
 					$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
