Implemented unique validation with autocomplete

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -310,6 +310,20 @@ hr {
 	position: relative;
 	right: 1px;
 }
+
+.icon_prohibited {
+	background-image: url('../../themes/default/warning.svg');
+	background-position: bottom 50% right 5px;
+	background-repeat: no-repeat;
+	background-size: 7%;
+}
+.icon_validated {
+	background-image: url('../../themes/default/validated.svg');
+	background-position: bottom 50% right 5px;
+	background-repeat: no-repeat;
+	background-size: 7%;
+}
+
 .notice_to_active_users {
 	position: absolute;
 	top: 27px;
