--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -153,7 +153,7 @@ input[type="text"], input[type="password"], textarea {
 	border-radius: 3px;
 	//box-shadow: inset 0 0 5px #D2D2D2;
 	//transition: all 0.09s ease-in-out;
-	background-color: #FFFFFF;
+	//background-color: #FFFFFF;
 	font-size: 12px;
 	}
 	input[type=text]:hover, input[type="password"]:hover {
