--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -322,14 +322,15 @@ div.dato_refecence_default_lang {
 
 
 .search_component > .wrap_component > .content_data > input.q_operator {
-	width: 10% !important;
-	margin-right: 5px;
 	display: inline-block;
-	min-width: initial;
-	height: 2em;
-	text-align: center;
-	//vertical-align: middle;
 	float: left;
+	width: 10% !important;
+	min-width: initial;
+	min-width: 30px;
+	height: 2em;
+	margin-right: 5px;	
+	text-align: center;
+	//vertical-align: middle;	
 	}
 	.search_component > .wrap_component > .content_data > input.q_operator:focus {		
 		//background-color: #4F4F4F;
