--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -6,8 +6,6 @@
 
 
 
-
-
 .css_wrap_autocomplete_hi {
 	//background-color: #B5E1FF
 	}
@@ -42,7 +40,7 @@
 
 
 /* AUTOCOMPLETE SEARCH FIELD 
------------------------------------------ */
+----------------------------------------- 
 input.css_autocomplete_hi_search_field {
 	float: right;
 	width: 100px;
@@ -61,8 +59,8 @@ input.css_autocomplete_hi_search_field {
 		background-position-x: 95%;
 	}
 
-	/* Search variant
-	----------------------------------------- */
+	// Search variant
+	----------------------------------------- 
 	input.css_autocomplete_hi_search_field.in_search_mode,
 	.new_autocomplete_hi.in_search_mode {
 		float: left;
@@ -79,6 +77,7 @@ input.css_autocomplete_hi_search_field {
 	ul.css_autocomplete_hi_valor.in_search_mode {
 		padding-top: 5px;
 	}
+*/
 
 
 
@@ -100,77 +99,76 @@ input.css_autocomplete_hi_dato_hidden {
 
 /* BTN DELETE 
 ----------------------------------------- */
-.css_autocomplete_hi_button_delete {
-	position: relative;
-	top: 0px;
-	margin-right: 5px;
-	background-position: -456px 0;
-	opacity: 0.3;
-}
+	.css_autocomplete_hi_button_delete {
+		position: relative;
+		top: 0px;
+		margin-right: 5px;
+		background-position: -456px 0;
+		opacity: 0.3;
+	}
 
 
 
-.css_autocomplete_hi_tree_stats {
-	display: inline-block;	
-	color: #1a1a1a;
-	padding: 3px;
-	padding-left: 5px;
-	padding-right: 0px;
-	float: right;
-	color: #aeaeae;
-	font-size: 90%;
-}
+	.css_autocomplete_hi_tree_stats {
+		display: inline-block;	
+		color: #1a1a1a;
+		padding: 3px;
+		padding-left: 5px;
+		padding-right: 0px;
+		float: right;
+		color: #aeaeae;
+		font-size: 90%;
+	}
 
 
 
-.wrap_portal_list{
-	padding: 1px;
-}
+	.wrap_portal_list{
+		padding: 1px;
+	}
 
-.css_autocomplete_hi_ul_edit_in_portal{
-	display: inline-block;
-	width: 16px;
-	height: 16px;
-	background-size: cover;
-	float: left;
-	background: url('../../themes/default/close.svg') center center no-repeat;
-	-webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    -webkit-filter: brightness(0%);
-    filter: brightness(0%);
-    opacity: 0.4;
-}.css_autocomplete_hi_ul_edit_in_portal:hover{
-	-webkit-filter: hue-rotate(150deg) brightness(100%) saturate(2);	
-	filter: hue-rotate(150deg) brightness(100%) saturate(2);
-	cursor: pointer;
-	opacity: 0.8;
+	.css_autocomplete_hi_ul_edit_in_portal {
+		display: inline-block;
+		width: 16px;
+		height: 16px;
+		background-size: cover;
+		float: left;
+		background: url('../../themes/default/close.svg') center center no-repeat;
+		-webkit-transform: rotate(45deg);
+	    -moz-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	    -o-transform: rotate(45deg);
+	    transform: rotate(45deg);
+	    -webkit-filter: brightness(0%);
+	    filter: brightness(0%);
+	    opacity: 0.4;
+		}
+		.css_autocomplete_hi_ul_edit_in_portal:hover {
+			-webkit-filter: hue-rotate(150deg) brightness(100%) saturate(2);	
+			filter: hue-rotate(150deg) brightness(100%) saturate(2);
+			cursor: pointer;
+			opacity: 0.8;
+		}
+	
 
-}
-.css_autocomplete_hi_ul{
+	.css_autocomplete_hi_button_close {
+		display: inline-block;
+		width: 16px;
+		height: 16px;
+		background-size: cover;
+		float: right;
+		background: url('../../themes/default/close.svg') center center no-repeat;
+		//filter: hue-rotate(30deg) saturate(.5) brightness(0%) saturate(4)
+		-webkit-filter: brightness(0%);
+		filter: brightness(0%);
+		 opacity: 0.4;
+		}
+		.css_autocomplete_hi_button_close:hover {
+			-webkit-filter: brightness(100%);
+			filter:brightness(100%); 
+			cursor: pointer;
+			opacity: 0.8;
+		}
 
-}
-
-
-.css_autocomplete_hi_button_close{
-	display: inline-block;
-	width: 16px;
-	height: 16px;
-	background-size: cover;
-	float: right;
-	background: url('../../themes/default/close.svg') center center no-repeat;
-	//filter: hue-rotate(30deg) saturate(.5) brightness(0%) saturate(4)
-	-webkit-filter: brightness(0%);
-	filter: brightness(0%);
-	 opacity: 0.4;
-}.css_autocomplete_hi_button_close:hover{
-	-webkit-filter: brightness(100%);
-	filter:brightness(100%); 
-	cursor: pointer;
-	opacity: 0.8;
-}
 
 .css_wrap_autocomplete_hi.wrap_portal_list > .content_data {
 	width: 100%;
@@ -181,6 +179,7 @@ input.css_autocomplete_hi_dato_hidden {
 	width: 80%;
 	min-height: 22px;
 }
+
 /* Search mode variant
 -------------------------------------------*/
 .css_autocomplete_hi_valor.in_search_mode {
@@ -223,11 +222,14 @@ input.css_autocomplete_hi_dato_hidden {
 	position: absolute;
 	left: 0;
 	top: 0;*/
-	margin-top:10px;
+	//margin-top:10px;
 	border-radius: 4px;
 	white-space: nowrap;
 	color: #ffffff !important;
 	width: 100%;
+	top: 5px;
+    position: relative;
+	margin-bottom: 5px;
 	}
 	.toponymy_list li {
 		//display: table;
@@ -274,13 +276,16 @@ input.css_autocomplete_hi_dato_hidden {
 	.toponymy_list_button_options {
 		float: right;
 		position: relative;
-		top: -17px;
+		top: -16px;
 		right: 5px;
 		opacity: .3;
 		background-position: -432px 0;
 		right: 0;
 		position: absolute;	
 		zoom: 1.15;
+	}
+	.toponymy_list_button_options.in_search_mode {
+		top: 5px;
 	}
 
 	.toponymy_list mark {
@@ -315,7 +320,7 @@ input.css_autocomplete_hi_dato_hidden {
 
 
 /* AUTOCOMPLETE
----------------------------------------- */
+---------------------------------------- 
 	.css_wrap_autocomplete_hi .autocomplete_wrapper {
 		float: right;
 		position: relative;
@@ -325,5 +330,5 @@ input.css_autocomplete_hi_dato_hidden {
 		float: left;
 		margin-right: 5px;
 	}
-	
+	*/
 
