--- a/lib/dedalo/component_autocomplete/css/component_autocomplete.less
+++ b/lib/dedalo/component_autocomplete/css/component_autocomplete.less
@@ -28,9 +28,10 @@
 		height: 30px;
 		float: right;
 		*/
+		display: none;
 		position: absolute;
 		top: 0px;
-		opacity: .3;
+		opacity: .5;
 		right: 0;
 		}
 
@@ -77,7 +78,8 @@
 		padding: 3px;
 		padding-left: 0px;
 		padding-right: 5px;
-		min-width: 70%;
+		width: 100%;
+
 		}
 		ul.css_autocomplete_valor.in_search_mode {
 			margin-top: 25px;
@@ -86,7 +88,7 @@
 		}
 		ul.css_autocomplete_valor > li {
 			display: flex;
-			max-width: 95%;
+			//max-width: 95%;
 		}
 		ul.css_autocomplete_valor.in_search_mode {
 			//float: left;
@@ -109,59 +111,6 @@
 			display: none !important;
 		}
 
-
-
-
-	/* AUTOCOMPLETE SEARCH FIELD 
-	--------------------------------------------- 
-	input.css_autocomplete_search_field {
-		float: right;
-		width: 100px;
-		//right: -30px;
-		//position: relative;
-		right: 0;
-		position: absolute;
-		opacity: 0.5;
-		background: white url('../../themes/default/lupa2.svg') right center no-repeat;
-		background-size: auto 100%;
-		background-position-x: 75%;
-		transition: all 0.2s ease-in-out;
-		width: initial !important;
-		}
-		input.css_autocomplete_search_field:hover {
-			opacity: 1;
-		}
-		input.css_autocomplete_search_field:focus {
-			opacity: 1;
-			//width: 150px;
-			background-position-x: 95%;
-		}
-
-		/// Search variant
-		----------------------------------------- 
-		input.css_autocomplete_search_field.in_search_mode,
-		.new_autocomplete.in_search_mode {
-			position: relative;
-			float: none;
-			margin-right: 10px;
-			opacity: 1
-		}
-		div.autocomplete_list_button_options.in_search_mode {
-			//position: relative;
-			//float: left;
-			//top: 1px;
-			//margin-right: 5px;
-			//margin-left: 5px;
-			//zoom: 1.45;
-			//transform: scale(200);
-
-			position: relative;			
-			top: 1px;
-			margin-right: 5px;
-			margin-left: 39px;
-			zoom: 1.45;
-		}
-		*/
 
 
 	/* DATO HIDDEN INPUT
@@ -358,12 +307,14 @@
 			.autosearch_options {
 				//background-color: #DFFE79;
 				display: none;
-				padding-right: 0; //100px;
-				background-color: #8e8e8e;
-				color: #fcfcfc;
-				border-radius: 4px;
-				margin-top: 0; //10px;
-				margin-bottom: 5px;
+				padding: 5px;
+				//padding-right: 0; //100px;
+				//background-color: #8e8e8e;
+				color: #9e9e9e;
+				border-bottom: 0.5px solid #ccc;
+				//border-radius: 4px;
+				//margin-top: 0; //10px;
+				//margin-bottom: 5px;
 				clear: both;
 				}
 			.autosearch_options.in_search_mode {
@@ -417,9 +368,10 @@
 			display: table;
 			//margin-top: 15px;
 			margin-bottom: 10px;
-			background-color: #cecece;
+			//background-color: #cecece;
 			padding: 10px;
-			border-radius: 3px;
+			//border-radius: 3px;
+			border-bottom: 0.5px solid #ccc;
 
 			input.css_autocomplete_search_field {
 				width: initial;
@@ -463,5 +415,24 @@
 				background-color: transparent !important
 			}
 		}
+	}
+
+	.component_options_container{
+		display: none;
+		position: absolute;
+		width: 100%;
+		z-index: 10;
+		background-color: @color_selected_wrap;
+		//box-shadow: 2px 2px 5px #d4d4d4;
+		//margin-top: 9px;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		//border-top: 0.5px solid #ccc;
+		left: 0px;
+		right: 0px;
+	}
+
+	.component_options_container_active{
+		display: block;
 	}
 
